# hackskill

./: .env.example  .gitignore  API-DESIGN.md  ARCHITECTURE.md  FOLDER_STRUCTURE.MD  MODULES.md  README.md  ROADMAP.md  TECH_STACK.md  ai-engine.md  database.md  deployment.md  docker-compose.prod.yml  docker-compose.yml  h --force origin main  implementation_plan.md  package-lock.json  security.md  task.md
backend/: Dockerfile  main.py  pyproject.toml  requirements.txt
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: README
backend/app/: __init__.py  config.py  dependencies.py  main.py  middleware.py  worker.py
backend/app/core/: __init__.py  metrics.py
backend/app/core/database/: __init__.py  base.py  redis.py  session.py
backend/app/core/events/: __init__.py  base.py  bus.py  registry.py
backend/app/core/exceptions/: __init__.py  base.py  handlers.py
backend/app/core/logging/: __init__.py  logger.py
backend/app/core/security/: __init__.py  jwt.py  limiter.py  middleware.py  password.py  rbac.py
backend/app/modules/: __init__.py
backend/app/modules/analytics/: __init__.py  router.py  schemas.py  service.py
backend/app/modules/audit/: __init__.py  listeners.py  models.py  repository.py  router.py  schemas.py  service.py
backend/app/shared/: __init__.py  pagination.py  response.py  validators.py
backend/migrations/: env.py
backend/tests/: __init__.py  conftest.py  test_demo_auth.py  test_hospitals_module.py
backend/tests/core/: __init__.py  test_event_bus.py  test_exceptions.py  test_jwt.py  test_rbac.py
(+155 files in other folders)
